<resources>
    <string name="app_name">OneFitness</string>
    <string name="steps_textview">Steps</string>
    <string name="distance_textview">Distance</string>
    <string name="calories_textview">Calories</string>
    <string name="loading">Loading...</string>
    <string name="menu_refresh">Refresh</string>
    <string name="manual_permission_title">Change Permissions in Settings</string>
    <string name="manual_permission_location">Go to Settings to grant permissions for tracking.</string>
    <string name="manual_permission_files">Go to Settings to grant permissions for importing and exporting data.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="start">Start</string>
    <string name="start_session">Start Session</string>
    <string name="stop">Stop</string>
    <string name="cals">cals</string>
    <string name="_0">0</string>
    <string name="paceKm">/km</string>
    <string name="speedKm">km</string>
    <string name="_km">km</string>
    <string name="_00_00">00:00</string>
    <string name="_0_00">0.00</string>
    <string name="title">Title</string>
    <string name="_3">3</string>
    <string name="date">Date</string>
    <string name="pace">Pace</string>
    <string name="home">Home</string>
    <string name="journal">Journal</string>
    <string name="time">Time</string>
    <string name="goals">Goals</string>
    <string name="profile">Profile</string>
    <string name="save_text">Export Sessions</string>
    <string name="import_text">Import Sessions</string>

    <string-array name="sessions">
        <item>Running</item>
        <item>Cycling</item>
    </string-array>
</resources>
