<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/dateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textSize="@dimen/main_textview_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleText"
            app:srcCompat="@drawable/runningImage" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:text="@string/title"
            android:textSize="@dimen/medium_textview_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:text="@string/_00_00"
            android:textSize="@dimen/small_textview_size"
            app:layout_constraintBottom_toBottomOf="@+id/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/constTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:text="@string/time"
            android:textSize="@dimen/small_textview_size"
            app:layout_constraintBottom_toBottomOf="@+id/timeText"
            app:layout_constraintEnd_toStartOf="@+id/timeText"
            app:layout_constraintTop_toTopOf="@+id/timeText" />

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:text="@string/_0"
            android:textSize="@dimen/small_textview_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/timeText"
            app:layout_constraintStart_toStartOf="@+id/timeText"
            app:layout_constraintTop_toBottomOf="@+id/timeText" />

        <TextView
            android:id="@+id/constDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/_km"
            android:textSize="@dimen/small_textview_size"
            app:layout_constraintBottom_toBottomOf="@+id/distanceText"
            app:layout_constraintStart_toEndOf="@+id/distanceText"
            app:layout_constraintTop_toTopOf="@+id/distanceText" />

        <TextView
            android:id="@+id/constDistanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/distance_textview"
            android:textSize="@dimen/small_textview_size"
            app:layout_constraintBottom_toBottomOf="@+id/distanceText"
            app:layout_constraintEnd_toEndOf="@+id/constTimeText"
            app:layout_constraintStart_toStartOf="@+id/constTimeText"
            app:layout_constraintTop_toTopOf="@+id/distanceText" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>